Prevent the email reward inputs from overflowing

--- a/app/styles/reward-page.scss
+++ b/app/styles/reward-page.scss
@@ -93,6 +93,7 @@
 
         form .form-group {
           input {
+            display: inline-block;
             margin-bottom: 20px;
           }
 
